After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780217 - Fix misleading indentation
Fix misleading indentation
Status: RESOLVED FIXED
Product: zenity
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Zenity Maintainers
Zenity Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-17 18:10 UTC by Matthias Clasen
Modified: 2017-04-04 13:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix misleading indentation (857 bytes, patch)
2017-03-17 18:10 UTC, Matthias Clasen
none Details | Review

Description Matthias Clasen 2017-03-17 18:10:26 UTC
Coverity flagged this.
Comment 1 Matthias Clasen 2017-03-17 18:10:35 UTC
Created attachment 348201 [details] [review]
Fix misleading indentation