Fix misleading indentation

Coverity flagged this.

https://bugzilla.gnome.org/show_bug.cgi?id=780217